# ChatServer

./: CMakeLists.txt  README.md  autocompile.sh
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: db.hpp
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: friendModel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
test/cmakelist_test/: CMakeLists.txt
test/test_json/: testjson  testjson.cpp
test/test_muduo/: muduo_server.cpp
